--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surfi</title>
 </head>
-<body>
+<body class="popup">
     <h2>Surfi</h2>
     <img src="assets/logo/round_logo.png" class="logo" alt="Surfi logo">
     <div class="menu">
