--- a/popup.html
+++ b/popup.html
@@ -24,9 +24,9 @@
                 <img class="menu_icon" src="assets/home-icon.png" />
             </button>
         </a>
-        <!-- <button class="menu_button">
-            <div class="back">👈</div>
-        </button> -->
+        <button class="menu_button">
+            <img src="assets/icons/home.svg" alt="Home Icon">
+        </button>
     </div>
 </body>
 
