--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+
     <link rel="stylesheet" href="styles/popup.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,19 +16,23 @@
     <img src="assets/logo/round_logo.png" class="logo" alt="Surfi Logo">
 
     <div class="container">
-        <button class="sign_in_btn">Log In</button>
-        <button class="sign_in_btn">Create Account</button>
+        <button type="button" class="sign_in_btn">Log In</button>
+        <button type="button" class="sign_in_btn">Create Account</button>
     </div>
 
     <div class="menu">
         <a href="https://surfi.netlify.app" target="parent">
-            <button class="menu_button">
-                <img class="menu_icon" src="assets/home-icon.png" />
+            <button type="button" class="menu_button">                
+                <span class="material-icons menu_icon">home</span>
             </button>
         </a>
-        <button class="menu_button">
-            <img src="assets/icons/home.svg" alt="Home Icon">
+        <button type="button" class="menu_button">
+            <span class="material-icons menu_icon">account_circle</span>
         </button>
+        <button type="button" class="menu_button">
+            <span class="material-icons menu_icon">settings</span>
+        </button>
+        
     </div>
 </body>
 
