--- a/popup.html
+++ b/popup.html
@@ -1,39 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
-<head>
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+        <link rel="stylesheet" href="styles/popup.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Surfi</title>
+    </head>
+    <body id="popup">
 
-    <link rel="stylesheet" href="styles/popup.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surfi</title>
-</head>
-
-<body class="popup">
-    <h2 class="title">Surfi</h2>
-    <img src="assets/logo/round_logo.png" class="logo" alt="Surfi Logo">
-
-    <div class="container">
-        <button type="button" class="sign_in_btn">Log In</button>
-        <button type="button" class="sign_in_btn">Create Account</button>
-    </div>
-
-    <div class="menu">
-        <a href="https://surfi.netlify.app" target="parent">
-            <button type="button" class="menu_button">                
-                <span class="material-icons menu_icon">home</span>
-            </button>
-        </a>
-        <button type="button" class="menu_button">
-            <span class="material-icons menu_icon">account_circle</span>
-        </button>
-        <button type="button" class="menu_button">
-            <span class="material-icons menu_icon">settings</span>
-        </button>
-        
-    </div>
-</body>
-
+        <script type="module" src="popup.js"></script>
+    </body>
 </html>
