--- a/popup.html
+++ b/popup.html
@@ -14,4 +14,5 @@
     <script type="module" src="popup.js"></script>
 </body>
 
+<script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
 </html>
