--- a/popup/main/popup.html
+++ b/popup/main/popup.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="styles/popup.css">
+    <link rel="stylesheet" href="popup.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,5 +13,4 @@
 <body id="popup">
     <script type="module" src="popup.js"></script>
 </body>
-<script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
 </html>
