--- a/popup/src/review.html
+++ b/popup/src/review.html
@@ -1,3 +1,20 @@
 <div class="SurfiComponent secondary-container">
-    <img src="assets/mock/pagedata.png" class="mock">
+    <h2 class="title">Page Name</h2>
+    <div>
+        <span class="material-icons star_icon">star</span>
+        <span class="material-icons star_icon">star</span>
+        <span class="material-icons star_icon">star</span>
+        <span class="material-icons star_icon">star</span>
+        <span class="material-icons star_icon">star</span>
+    </div>
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+      </div>
+      <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+      </div>
+      <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    </div>
+    <img src="../../assets/mock/pagedata.png" class="mock">
 </div>
